Fix Textarea dropdown z-index issue

--- a/src/styles/mentions/access.css
+++ b/src/styles/mentions/access.css
@@ -18,7 +18,7 @@
   font-stretch: inherit;
   font-weight: inherit;
   font-family: inherit;
-  padding: 0;
+  padding: 10px;
   margin: 0;
   line-height: inherit;
   vertical-align: top;
@@ -48,7 +48,6 @@
   pointer-events: none;
   color: transparent;
   z-index: -1;
-  /* z-index: -99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999; */
 
   border-radius: 4px;
 }
@@ -57,6 +56,7 @@
   position: absolute;
 
   border-radius: 4px;
+  z-index: 9999;
 }
 
 .rc-mentions-dropdown-menu {
